# liturgio-tools

./: .gitignore  README.md  pyproject.toml
examples/: melodic_similarity.py
liturgio_tools/: cli.py  fix_missing_scores.py  gregobase.py  upload_english_chants.py
liturgio_tools/gregobase_sync/: _parse_sql.py  gregobase_scrape.py  test_scrape.py
liturgio_tools/gregobase_sync/gabc/: 889.gabc
liturgio_tools/liturgical_calendar/: __init__.py  lookup.py  resolver.py
liturgio_tools/translations/: HANDOFF.md  apply_p_lit_rank.py  load_lit_part_texts.py  load_propers.py  load_saints.py
liturgio_tools/translations/tools/: parse_easter.py  parse_propers.py  parse_saints.py
scripts/: dedup_lit_part_assignment.py  migrate_step5_lit_part_sources.py  migrate_step6a_lit_part_sources_epoch_slug.py  migrate_step6b_option_num.py  migrate_step6c_christmas_masses_and_drop_cols.py  migrate_step8_lps_absorbs_lpa.py  migrate_step8a_prep_lpa_chant_uuid.py
scripts/archive/: assign_tp3.py  psalms-vul.txt  textmatch.py  textmatch_psalms.pkl  upload-chant-texts.py  upload_psalms_to_db.py
sql/: make-books.sql  make-lit-epoch.sql  make-lit-observance-resolved.sql  make-lit-text-chant-link.sql  make-liturgical-day.sql  make-proper-of-saints.sql  make-slot-candidate.sql  make-tocs.sql  make_param_tables.sql  migrate-lit-part-sources.sql  query-daily-mass-parts.sql  seed-saints-sample.sql  set-liturgical-day-ranks.sql
tests/: test_lookup_integration.py  test_resolver.py
